[package]
name = "linus"
version = "0.1.0"
edition = "2024"
description = "A lightweight AI-powered code review engine using local Ollama models"
authors = ["linus contributors"]
license = "MIT"
repository = "https://github.com/krishpranav/linus.ai"
keywords = ["code-review", "ai", "ollama", "cli", "tui"]

[[bin]]
name = "linus"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
ignore = "0.4"
petgraph = "0.6"
ratatui = "0.26"
crossterm = "0.27"
indicatif = "0.17"
anyhow = "1"
thiserror = "1"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
strip = true